force-app/main/default/objects/Support_Ticket__c/fields/Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours__c</fullName>
    <label>Actual Hours</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>