force-app/main/default/objects/Support_Ticket__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Bug Report</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>