force-app/main/default/objects/Support_Ticket__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <label>Estimated Hours</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>