force-app/main/default/objects/Support_Ticket__c/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>true</active>
    <description>Description field is required for all tickets</description>
    <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Description is required</errorMessage>
</ValidationRule>