force-app/main/default/objects/Support_Ticket__c/validationRules/Due_Date_Must_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Must_Be_Future</fullName>
    <active>true</active>
    <description>Due Date must be in the future for new tickets</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;New&quot;),
    Due_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date must be in the future for new tickets</errorMessage>
</ValidationRule>