force-app/main/default/objects/Support_Ticket__c/validationRules/Resolution_Required_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Required_When_Closed</fullName>
    <active>true</active>
    <description>Resolution field must be populated when ticket status is Resolved or Closed</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status__c, &quot;Resolved&quot;),
        ISPICKVAL(Status__c, &quot;Closed&quot;)
    ),
    ISBLANK(Resolution__c)
)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Resolution is required when ticket status is Resolved or Closed</errorMessage>
</ValidationRule>